--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "author": "Tslenks",
   "license": "MIT",
   "scripts": {
-    "serve": "live-server public/",
+    "serve": "live-server public/ --port=10254",
     "build": "webpack --watch",
     "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch"
   },
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
+    "@babel/cli": "7.10.5",
+    "@babel/core": "^7.11.1",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "7.10.4",
+    "babel-loader": "^8.1.0",
     "live-server": "^1.2.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "validator": "13.1.1",
     "webpack": "^4.44.1"
   },
   "devDependencies": {
