--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "license": "MIT",
   "scripts": {
     "serve": "live-server public/ --port=10254",
-    "build": "webpack --watch",
-    "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch"
+    "build": "webpack",
+    "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch",
+    "dev-server": "webpack-dev-server"
   },
   "dependencies": {
     "@babel/cli": "7.10.5",
@@ -19,7 +20,8 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "validator": "13.1.1",
-    "webpack": "^4.44.1"
+    "webpack": "^4.44.1",
+    "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
     "webpack-cli": "^3.3.12"
